--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -21,8 +21,7 @@ dependencies:
     - field.field.node.publication.field_last_issue_date_is_approx
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_oclc
-    - field.field.node.publication.field_publication_place_city
-    - field.field.node.publication.field_publication_place_province
+    - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
@@ -33,6 +32,7 @@ dependencies:
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
+    - address
     - datetime_range
     - field_group
     - file
@@ -40,20 +40,6 @@ dependencies:
     - user
 third_party_settings:
   field_group:
-    group_place_of_publication:
-      children:
-        - field_publication_place_province
-        - field_publication_place_city
-      parent_name: ''
-      weight: 0
-      format_type: details
-      format_settings:
-        id: ''
-        classes: ''
-        open: true
-        required_fields: false
-      label: 'Place of Publication'
-      region: content
     group_publication_dates:
       children:
         - field_title_notes
@@ -100,7 +86,7 @@ content:
     type: basic_string
     region: content
   field_first_issue_approx_date:
-    weight: 7
+    weight: 3
     label: above
     settings:
       link_to_entity: false
@@ -108,7 +94,7 @@ content:
     type: string
     region: content
   field_first_issue_date:
-    weight: 6
+    weight: 1
     label: above
     settings:
       separator: '-'
@@ -149,7 +135,7 @@ content:
     type: string
     region: content
   field_last_issue_approx_date:
-    weight: 10
+    weight: 5
     label: above
     settings:
       link_to_entity: false
@@ -157,7 +143,7 @@ content:
     type: string
     region: content
   field_last_issue_date:
-    weight: 9
+    weight: 4
     label: above
     settings:
       separator: '-'
@@ -174,27 +160,18 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_publication_place_city:
-    weight: 2
+  field_place_of_publication:
+    weight: 0
     label: above
-    settings:
-      link: true
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_publication_place_province:
-    weight: 1
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+    type: address_default
     region: content
   field_publisher:
     weight: 2
     label: above
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
