--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -28,6 +28,7 @@ dependencies:
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
+    - field.field.node.publication.field_subtitle
     - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_title_notes
     - node.type.publication
@@ -48,7 +49,7 @@ third_party_settings:
         - field_last_issue_date
         - field_last_issue_approx_date
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: details
       format_settings:
         id: ''
@@ -63,7 +64,7 @@ bundle: publication
 mode: default
 content:
   field_continued_by:
-    weight: 13
+    weight: 14
     label: above
     settings:
       link: true
@@ -71,7 +72,7 @@ content:
     type: entity_reference_label
     region: content
   field_continues:
-    weight: 12
+    weight: 13
     label: above
     settings:
       link: true
@@ -79,7 +80,7 @@ content:
     type: entity_reference_label
     region: content
   field_description:
-    weight: 10
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -104,14 +105,14 @@ content:
     type: daterange_default
     region: content
   field_frequency:
-    weight: 4
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_frequency_notes:
-    weight: 5
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -119,7 +120,7 @@ content:
     type: string
     region: content
   field_geographic_coverage:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -127,7 +128,7 @@ content:
     type: string
     region: content
   field_issn:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -153,7 +154,7 @@ content:
     type: daterange_default
     region: content
   field_oclc:
-    weight: 9
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -161,14 +162,14 @@ content:
     type: string
     region: content
   field_place_of_publication:
-    weight: 0
+    weight: 1
     label: above
     settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_publisher:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link: false
@@ -176,7 +177,7 @@ content:
     type: entity_reference_label
     region: content
   field_related_title:
-    weight: 14
+    weight: 15
     label: above
     settings:
       link: true
@@ -184,14 +185,22 @@ content:
     type: entity_reference_label
     region: content
   field_subject_notes:
-    weight: 7
+    weight: 8
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_subjects:
-    weight: 6
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_subtitle:
+    weight: 0
     label: above
     settings:
       link_to_entity: false
@@ -199,7 +208,7 @@ content:
     type: string
     region: content
   field_supplemental_information:
-    weight: 11
+    weight: 12
     label: above
     settings:
       use_description_as_link_text: true
@@ -214,7 +223,7 @@ content:
     type: basic_string
     region: content
   links:
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
