Make Place of Publication optional, add United Kingdom option

--- a/config-yml/field.field.node.publication.field_place_of_publication.yml
+++ b/config-yml/field.field.node.publication.field_place_of_publication.yml
@@ -13,13 +13,14 @@ entity_type: node
 bundle: publication
 label: 'Place of Publication'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   available_countries:
     CA: CA
+    GB: GB
     US: US
   fields:
     administrativeArea: administrativeArea
