--- a/config-yml/chosen.settings.yml
+++ b/config-yml/chosen.settings.yml
@@ -1,7 +1,7 @@
 minimum_single: 20
 minimum_multiple: 20
 disable_search_threshold: 0
-minimum_width: 0
+minimum_width: null
 jquery_selector: 'select:visible'
 search_contains: false
 disable_search: false
@@ -9,7 +9,12 @@ allow_single_deselect: false
 placeholder_text_multiple: 'Choose some options'
 placeholder_text_single: 'Choose an option'
 no_results_text: 'No results match'
-disabled_themes: {  }
+disabled_themes:
+  bartik: '0'
+  seven: '0'
+  bootstrap: '0'
+  unb_lib_theme: '0'
+  newspapers_lib_unb_ca: '0'
 chosen_include: 2
 _core:
   default_config_hash: JUHKHJeHl1bWXY41HMIcDR-VmAWvJ4OJycDubCkIeDU
