--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -258,7 +258,7 @@ content:
   field_place_of_publication:
     weight: 4
     settings:
-      default_country: null
+      default_country: CA
     third_party_settings: {  }
     type: address_default
     region: content
