--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.publication.field_continues
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_is_approx
@@ -14,6 +15,7 @@ dependencies:
     - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
+    - field.field.node.publication.field_is_supplementary_title
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
@@ -23,13 +25,13 @@ dependencies:
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_publisher
-    - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
     - field.field.node.publication.field_subtitle
     - field.field.node.publication.field_supplemental_information
+    - field.field.node.publication.field_this_is_part_of_a_family
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
@@ -50,15 +52,33 @@ third_party_settings:
         - field_last_issue_date
         - field_last_issue_approx_date
       parent_name: ''
-      weight: 7
+      weight: 6
       format_type: details
       format_settings:
         label: 'Date of Publication'
+        open: true
         required_fields: true
         id: ''
         classes: ''
-        open: false
       label: 'Date of Publication'
+      region: content
+    group_title_details:
+      children:
+        - field_subtitle
+        - field_title_notes
+        - field_this_is_part_of_a_family
+        - field_family
+        - field_is_supplementary_title
+        - field_sort_title
+      parent_name: ''
+      weight: 1
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Title Details'
       region: content
 id: node.publication.default
 targetEntityType: node
@@ -67,12 +87,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 22
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   field_continued_by:
-    weight: 19
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -81,7 +101,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_continues:
-    weight: 18
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -98,15 +118,45 @@ content:
     type: string_textarea
     region: content
   field_description:
-    weight: 15
+    weight: 2
     settings:
       rows: 3
       placeholder: ''
     third_party_settings: {  }
     type: string_textarea
     region: content
+  field_family:
+    weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        195b0c8c-7931-4324-a1ea-273a0ebec748:
+          dependee: field_this_is_part_of_a_family
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '200'
+            selector: ''
+          entity_type: node
+          bundle: publication
+    type: entity_reference_autocomplete
+    region: content
   field_first_issue_approx_date:
-    weight: 39
+    weight: 38
     settings:
       size: 60
       placeholder: ''
@@ -135,7 +185,7 @@ content:
     type: string_textfield
     region: content
   field_first_issue_date:
-    weight: 38
+    weight: 37
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
@@ -148,7 +198,7 @@ content:
     type: boolean_checkbox
     region: content
   field_frequency:
-    weight: 8
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -168,7 +218,7 @@ content:
             grouping: AND
             values_set: 3
             value: ''
-            values: "daily\r\nweekly\r\nmonthly\r\nvaries"
+            values: varies
             value_form: {  }
             effect: slide
             effect_options:
@@ -182,12 +232,40 @@ content:
     type: string_textfield
     region: content
   field_geographic_coverage:
-    weight: 5
+    weight: 4
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_is_supplementary_title:
+    weight: 6
+    settings:
+      display_label: true
+    third_party_settings:
+      conditional_fields:
+        835b6766-1994-4096-be57-d8e98a0c2ba0:
+          dependee: field_this_is_part_of_a_family
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '200'
+            selector: ''
+          entity_type: node
+          bundle: publication
+    type: boolean_checkbox
     region: content
   field_issn:
     weight: 12
@@ -198,7 +276,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 20
+    weight: 18
     settings:
       format:
         name: name
@@ -256,23 +334,14 @@ content:
     type: string_textfield
     region: content
   field_place_of_publication:
-    weight: 4
+    weight: 3
     settings:
       default_country: CA
     third_party_settings: {  }
     type: address_default
     region: content
   field_publisher:
-    weight: 6
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_related_title:
-    weight: 16
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -281,33 +350,12 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_sort_title:
-    weight: 2
+    weight: 7
     settings:
       size: 60
       placeholder: ''
     third_party_settings:
-      conditional_fields:
-        3eb7b996-475a-4596-9d34-c335107212c6:
-          dependee: title
-          settings:
-            state: '!visible'
-            condition: empty
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: ''
-            effect: slide
-            effect_options:
-              fade:
-                speed: '400'
-              slide:
-                speed: '200'
-            selector: ''
-          entity_type: node
-          bundle: publication
+      conditional_fields: {  }
     type: string_textfield
     region: content
   field_subject_notes:
@@ -327,41 +375,27 @@ content:
     type: string_textfield
     region: content
   field_subtitle:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings:
-      conditional_fields:
-        5250a369-51f8-41b4-8b79-7d5ffcb78566:
-          dependee: title
-          settings:
-            state: '!visible'
-            condition: empty
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: ''
-            effect: slide
-            effect_options:
-              fade:
-                speed: '400'
-              slide:
-                speed: '200'
-            selector: ''
-          entity_type: node
-          bundle: publication
+      conditional_fields: {  }
     type: string_textfield
     region: content
   field_supplemental_information:
-    weight: 17
+    weight: 15
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
+    region: content
+  field_this_is_part_of_a_family:
+    weight: 4
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_title_notes:
     weight: 3
@@ -369,33 +403,12 @@ content:
       rows: 3
       placeholder: ''
     third_party_settings:
-      conditional_fields:
-        5117f7ea-a0a0-4c7b-be3c-d7518c404d55:
-          dependee: title
-          settings:
-            state: '!visible'
-            condition: empty
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: ''
-            effect: slide
-            effect_options:
-              fade:
-                speed: '400'
-              slide:
-                speed: '200'
-            selector: ''
-          entity_type: node
-          bundle: publication
+      conditional_fields: {  }
     type: string_textarea
     region: content
   path:
     type: path
-    weight: 25
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -403,21 +416,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 23
+    weight: 21
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 24
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 24
+    weight: 22
     region: content
     third_party_settings: {  }
   title:
@@ -430,7 +443,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 21
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
