--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.publication.field_continues
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_is_approx
@@ -14,6 +15,7 @@ dependencies:
     - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
+    - field.field.node.publication.field_is_supplementary_title
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
@@ -23,13 +25,13 @@ dependencies:
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_publisher
-    - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
     - field.field.node.publication.field_subtitle
     - field.field.node.publication.field_supplemental_information
+    - field.field.node.publication.field_this_is_part_of_a_family
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
@@ -86,6 +88,14 @@ content:
     third_party_settings: {  }
     type: basic_string
     region: content
+  field_family:
+    weight: 18
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_first_issue_approx_date:
     weight: 3
     label: above
@@ -126,6 +136,16 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_is_supplementary_title:
+    weight: 20
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_issn:
     weight: 9
@@ -176,14 +196,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_related_title:
-    weight: 15
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_subject_notes:
     weight: 8
     label: above
@@ -214,6 +226,16 @@ content:
       use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
+    region: content
+  field_this_is_part_of_a_family:
+    weight: 19
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_title_notes:
     weight: 0
