--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -22,12 +22,13 @@ dependencies:
     - field.field.node.publication.field_last_issue_date_is_approx
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_oclc
+    - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_publisher
-    - field.field.node.publication.field_related_title
     - field.field.node.publication.field_serial_holdings
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
+    - field.field.node.publication.field_subtitle
     - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_title_notes
     - node.type.publication
@@ -69,11 +70,11 @@ hidden:
   field_place_of_publication: true
   field_province_state: true
   field_publisher: true
-  field_related_title: true
   field_serial_holdings: true
   field_sort_title: true
   field_subject_notes: true
   field_subjects: true
+  field_subtitle: true
   field_supplemental_information: true
   field_title_notes: true
   langcode: true
