--- a/config-yml/field.field.node.publication.field_description.yml
+++ b/config-yml/field.field.node.publication.field_description.yml
@@ -10,7 +10,7 @@ field_name: field_description
 entity_type: node
 bundle: publication
 label: Description
-description: "More detailed vol/iss information for the included range<br>\r\n<b>Example:</b>Vol. 62, no. 151 (June 25,1894)-v. 75, no. 319 (Dec. 14, 1907)"
+description: "Broad description or abstract for the paper\r\n"
 required: false
 translatable: false
 default_value: {  }
