--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -19,6 +19,8 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  elasticsearch_connector: 0
+  elasticsearch_connector_views: 0
   field: 0
   field_group: 0
   field_ui: 0
