--- a/config-yml/field.field.node.publication.field_frequency_notes.yml
+++ b/config-yml/field.field.node.publication.field_frequency_notes.yml
@@ -10,7 +10,7 @@ field_name: field_frequency_notes
 entity_type: node
 bundle: publication
 label: 'Frequency Notes'
-description: ''
+description: 'Displays beside the frequency of publication value'
 required: false
 translatable: false
 default_value: {  }
