--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -10,7 +10,7 @@ dependencies:
     - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
-    - field.field.node.publication.field_first_issue_date_is_approx
+    - field.field.node.publication.field_first_issue_date_type
     - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
@@ -20,7 +20,7 @@ dependencies:
     - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
-    - field.field.node.publication.field_last_issue_date_is_approx
+    - field.field.node.publication.field_last_issue_date_type
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
@@ -114,6 +114,13 @@ content:
     third_party_settings: {  }
     type: daterange_default
     region: content
+  field_first_issue_date_type:
+    weight: 23
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_frequency:
     weight: 5
     label: above
@@ -172,6 +179,13 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: daterange_default
+    region: content
+  field_last_issue_date_type:
+    weight: 22
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_oclc:
     weight: 10
@@ -251,10 +265,8 @@ content:
     third_party_settings: {  }
 hidden:
   field_credit: true
-  field_first_issue_date_is_approx: true
   field_first_issue_sort_date: true
   field_language: true
-  field_last_issue_date_is_approx: true
   field_last_issue_sort_date: true
   field_serial_holdings: true
   field_sort_title: true
