--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -8,18 +8,20 @@ dependencies:
     - field.field.node.publication.field_continues
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_family
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
-    - field.field.node.publication.field_first_issue_date_is_approx
+    - field.field.node.publication.field_first_issue_date_type
     - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
+    - field.field.node.publication.field_is_supplementary_title
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_language
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
-    - field.field.node.publication.field_last_issue_date_is_approx
+    - field.field.node.publication.field_last_issue_date_type
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
@@ -30,6 +32,7 @@ dependencies:
     - field.field.node.publication.field_subjects
     - field.field.node.publication.field_subtitle
     - field.field.node.publication.field_supplemental_information
+    - field.field.node.publication.field_this_is_part_of_a_family
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
@@ -49,21 +52,23 @@ hidden:
   field_continues: true
   field_credit: true
   field_description: true
+  field_family: true
   field_first_issue: true
   field_first_issue_approx_date: true
   field_first_issue_date: true
-  field_first_issue_date_is_approx: true
+  field_first_issue_date_type: true
   field_first_issue_precise_date: true
   field_first_issue_sort_date: true
   field_frequency: true
   field_frequency_notes: true
   field_geographic_coverage: true
+  field_is_supplementary_title: true
   field_issn: true
   field_language: true
   field_last_issue: true
   field_last_issue_approx_date: true
   field_last_issue_date: true
-  field_last_issue_date_is_approx: true
+  field_last_issue_date_type: true
   field_last_issue_precise_date: true
   field_last_issue_sort_date: true
   field_oclc: true
@@ -76,5 +81,6 @@ hidden:
   field_subjects: true
   field_subtitle: true
   field_supplemental_information: true
+  field_this_is_part_of_a_family: true
   field_title_notes: true
   langcode: true
