--- a/config-yml/field.field.node.publication.field_first_issue_date.yml
+++ b/config-yml/field.field.node.publication.field_first_issue_date.yml
@@ -12,7 +12,7 @@ field_name: field_first_issue_date
 entity_type: node
 bundle: publication
 label: 'First Issue Date Range'
-description: 'First Issue date help text'
+description: "<b>Note:</b> Approximate dates require a date <i>range</i> - enter the start and end of the range described by the <i>verbatim</i> date.<br>\r\n<b>Example:</b> the year <i>2010</i> would be entered using <kbd>2010/01/01</kbd> as the <i>start</i> and <kbd>2010/12/31</kbd> as the <i>end</i> date."
 required: false
 translatable: false
 default_value: {  }
