--- a/config-yml/search_api.server.default_server.yml
+++ b/config-yml/search_api.server.default_server.yml
@@ -1,6 +1,6 @@
 uuid: 7556f4a4-5161-4113-a785-1d61af0aa37a
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search_api_db
