--- a/config-yml/elasticsearch_connector.cluster.drupal_elasticsearch_lib_unb_ca.yml
+++ b/config-yml/elasticsearch_connector.cluster.drupal_elasticsearch_lib_unb_ca.yml
@@ -4,7 +4,7 @@ status: '1'
 dependencies: {  }
 cluster_id: drupal_elasticsearch_lib_unb_ca
 name: drupal_elasticsearch_lib_unb_ca
-url: 'http://drupal.elasticsearch.lib.unb.ca:9200'
+url: 'http://drupal-elasticsearch-lib-unb-ca:9200'
 options:
   multiple_nodes_connection: false
   use_authentication: 0
